# E-commerce-Customer-Churn_prediction

./: Dockerfile  README.md  pyproject.toml  requirements.txt
config/: config.yaml
model/: feature_names.pkl  metadata.json  model.pkl  preprocessor.pkl
notebook/: project.ipynb
notebook/.ipynb_checkpoints/: project-checkpoint.ipynb
scripts/: predict.py  train.py
