[project]
name = "E-commerce-Customer-Churn_prediction"
version = "1.0.0"
description = "Machine Learning model to predict customer churn for e-commerce"
authors = [{name = "Eva L", email = "eva007.liu@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "xgboost>=1.7.0",
    "lightgbm>=3.3.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "joblib>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pytest>=7.4.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pytest-cov>=4.0.0",
]

[tool.uv]
# uv specific settings